@@ -4,10 +4,11 @@ OP_DELETE = 'OP_DELETE'
 OP_APPLY = 'OP_APPLY'
 
 SC_LOCAL = 1
-SC_GLOBAL = 2
-SC_FREE = 3
-SC_CELL = 4
-SC_UNKNOWN = 5
+SC_GLOBAL_IMPLICIT = 2
+SC_GLOBAL_EXPLICT = 3
+SC_FREE = 4
+SC_CELL = 5
+SC_UNKNOWN = 6
 
 CO_OPTIMIZED = 0x0001
 CO_NEWLOCALS = 0x0002
